--- a/requestbin/templates/layouts/base.html
+++ b/requestbin/templates/layouts/base.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/static/assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+
+    <meta property="og:site_name" content="RequestBin - The Next-Gen Inspection Requests" />
+    <meta property="og:title" content="{{ self.title() }}" />
+    <meta property="og:image" content="/static/assets/images/logo.png" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
