--- a/requestbin/templates/layouts/base.html
+++ b/requestbin/templates/layouts/base.html
@@ -14,7 +14,7 @@
 
     <meta property="og:site_name" content="RequestBin - The Next-Gen Inspection Requests" />
     <meta property="og:title" content="{{ self.title() }}" />
-    <meta property="og:image" content="/static/assets/images/logo.png" />
+    <meta property="og:image" content="https://requestbin.net/static/assets/images/logo.png" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
