add loading anm

--- a/requestbin/templates/bin.html
+++ b/requestbin/templates/bin.html
@@ -22,7 +22,9 @@
 </script>
 <div class="p-4">
 <div class="bodybg rounded border-2 border-grey shadow container px-5 pt-5 pb-4">
-	<h4 class="card-title second-text-color"><i class="fa-solid fa-square-caret-right pr-2"></i>YOUR BIN</h4>
+	<h4 class="card-title second-text-color">
+    <i class="fa-solid fa-square-caret-right pr-2"></i>YOUR BIN
+  </h4>
 	<hr class="card-hr">
   <div>
     <span class="h5" id="bintext">{{bin.binID}}.b.{{base_url}}</span>
