--- a/requestbin/templates/home.html
+++ b/requestbin/templates/home.html
@@ -89,12 +89,30 @@
 		</div>
 		<div class="col-sm-4">
 			<div class="card">
-			<div class="card-body">
-				<h5 class="card-title"><i class="fa-solid fa-clock-rotate-left pr-2"></i><a href="/bins">Your Bins</a></h5>
-				<hr class="card-hr"/>
-				<ul id="recentBins" class="list-group list-group-flush">
-				</ul>
+				<div class="card-body">
+					<h5 class="card-title"><i class="fa-solid fa-clock-rotate-left pr-2"></i><a href="/bins">Your Bins</a></h5>
+					<hr class="card-hr"/>
+					<ul id="recentBins" class="list-group list-group-flush">
+					</ul>
+				</div>
 			</div>
+			<div class="card">
+				<div class="card-body">
+					<h5 class="card-title"><i class="fa-solid fa-clock-rotate-left pr-2"></i>ADS</h5>
+					<hr class="card-hr"/>
+					<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7093275067786161"
+						crossorigin="anonymous"></script>
+					<!-- RequestBin Home -->
+					<ins class="adsbygoogle"
+						style="display:block"
+						data-ad-client="ca-pub-7093275067786161"
+						data-ad-slot="2802856145"
+						data-ad-format="auto"
+						data-full-width-responsive="true"></ins>
+					<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-4">
